--- a/monkeypreter/monkeypreter.vcxproj
+++ b/monkeypreter/monkeypreter.vcxproj
@@ -134,6 +134,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\lexer\lexer.h" />
+    <ClInclude Include="src\repl.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
