--- a/monkeypreter/monkeypreter.vcxproj.filters
+++ b/monkeypreter/monkeypreter.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="src\lexer\lexer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\repl.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
