--- a/monkeypreter/monkeypreter.vcxproj
+++ b/monkeypreter/monkeypreter.vcxproj
@@ -131,9 +131,12 @@
   <ItemGroup>
     <ClCompile Include="monkeypreter.c" />
     <ClCompile Include="src\lexer\lexer.c" />
+    <ClCompile Include="src\parser\parser.c" />
+    <ClCompile Include="src\parser\parser.h" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\lexer\lexer.h" />
+    <ClInclude Include="src\parser\ast.h" />
     <ClInclude Include="src\repl.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
