--- a/monkeypreter/monkeypreter.vcxproj
+++ b/monkeypreter/monkeypreter.vcxproj
@@ -131,6 +131,7 @@
   <ItemGroup>
     <ClCompile Include="monkeypreter.c" />
     <ClCompile Include="src\lexer\lexer.c" />
+    <ClCompile Include="src\parser\ast.c" />
     <ClCompile Include="src\parser\parser.c" />
     <ClCompile Include="src\parser\parser.h" />
   </ItemGroup>
