Add parser: let + ret expr

--- a/monkeypreter_test/monkeypreter_test.vcxproj
+++ b/monkeypreter_test/monkeypreter_test.vcxproj
@@ -73,6 +73,7 @@
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
       <WarningLevel>Level3</WarningLevel>
       <AdditionalIncludeDirectories>C:\dev\monkeypreter\monkeypreter\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
