Memory management + small refactor of project structure

--- a/monkeypreter_test/monkeypreter_test.vcxproj
+++ b/monkeypreter_test/monkeypreter_test.vcxproj
@@ -33,7 +33,8 @@
   <ImportGroup Label="PropertySheets" />
   <PropertyGroup Label="UserMacros" />
   <ItemGroup>
-    <ClCompile Include="test.cpp" />
+    <ClCompile Include="test_lexer.cpp" />
+    <ClCompile Include="test_parser.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
