--- a/monkeypreter/monkeypreter.vcxproj.filters
+++ b/monkeypreter/monkeypreter.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="src\interpreter\environment.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\interpreter\gc.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\lexer\lexer.h">
@@ -60,6 +63,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\interpreter\builtins.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\interpreter\gc.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
