--- a/monkeypreter/monkeypreter.vcxproj.filters
+++ b/monkeypreter/monkeypreter.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="src\interpreter\gc.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\lexer\token.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\lexer\lexer.h">
@@ -66,6 +69,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\interpreter\gc.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\util.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\lexer\token.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
